<?xml version="1.0" encoding="utf-8"?>
<!-- 用户登陆 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_background"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:minHeight="?attr/actionBarSize" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/user_login_text_user_login"
            android:textColor="@color/grey_white"
            android:textSize="18sp" />
    </android.support.v7.widget.Toolbar>
    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_height"
        android:layout_marginTop="10dp"
        android:inputType="phone"
        android:paddingLeft="10dp"
        android:hint="@string/user_login_hint_username"
        style="@style/input_text">
    </EditText>
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_height"
        android:layout_marginTop="1dp"
        android:hint="@string/user_login_hint_password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        style="@style/input_text">
    </EditText>
	<apk.lib.widget.RoundButton
	    android:id="@+id/loginButton"
        app:radius="8"
        app:textColor="@color/grey_700"
        app:bgcolor="@color/grey_200"
        app:highlightMode="background"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_margin="10dp"
        app:text="@string/user_login_btn_user_login"
	/>
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    >
	    <TextView 
	        android:id="@+id/forgetPassword"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/user_login_text_forget_password"
	        android:layout_alignParentLeft="true"
	        android:layout_centerVertical="true"
	        android:textColor="@color/primary"
	        />
	    <TextView 
	        android:id="@+id/userRegist"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/user_login_text_regist_now"
	        android:layout_alignParentRight="true"
	        android:layout_centerVertical="true"
	        android:textColor="@color/primary"
	        />
	</RelativeLayout>
</LinearLayout>