<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_background"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:minHeight="?attr/actionBarSize" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/user_regist_text_user_regist"
            android:textColor="@color/grey_white"
            android:textSize="18sp" />
    </android.support.v7.widget.Toolbar>
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="@dimen/input_height"
	    android:background="@color/grey_white"
	    android:layout_marginTop="15dp"
	    android:orientation="horizontal" >
	    <TextView 
	        android:id="@+id/textRegistStep1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:textColor="@color/grey_800"
	        android:layout_gravity="center"
	        android:text="@string/user_regist_text_regist_step_1"
	        />
	    <com.joanzapata.iconify.widget.IconTextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:layout_gravity="center"
	        android:textColor="@color/grey_400"
	        android:text="@string/fa_angle_right"
	        />
		<TextView 
		    android:id="@+id/textRegistStep2"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:layout_gravity="center"
	        android:textColor="@color/grey_800"
	        android:text="@string/user_regist_text_regist_step_2"
	        />
		<com.joanzapata.iconify.widget.IconTextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:layout_gravity="center"
	        android:textColor="@color/grey_400"
	        android:text="@string/fa_angle_right"
	        />
		<TextView 
		    android:id="@+id/textRegistStep3"
	        android:layout_width="0dp"
	        android:layout_gravity="center"
	        android:gravity="center"
	        android:layout_height="wrap_content"
	        android:textColor="@color/grey_800"
	        android:layout_weight="1"
	        android:text="@string/user_regist_text_regist_step_3"
	        />
	</LinearLayout>
	<FrameLayout 
	    android:id="@+id/fragmentContent"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    />
</LinearLayout>
